# pgfem-3d

./: .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTORS  INSTALL  INSTALL.md  LICENSE  Makefile  Makefile.am  Makefile.path  a  bootstrap  compile-gcc-saha.sh  compile-gcc.sh  compile-gcc4.9.2.sh  compile-gcc6.2.0.sh  compile-intel15.sh  compile-intel16.sh  compile-saha.sh  compile.sh  config.site-gcc  config.site-gcc4.9.2  config.site-gcc6.2.0  config.site-intel  config.site-intel15  config.site-intel16  configure.ac  error.txt  reconf_git_branch.sh
FEMLIB/src/: Makefile.am  femlib.cc
energy_equation/src/: Makefile.am  energy_equation.c  energy_equation.cc
lib/Renumbering/src/: Makefile  Makefile.am  check_num_procs.c  comm_profiler.c  docs.config  domain_container.c  remove_diagonal.c  renumber.c  renumber_utils.c  switch_domains.c
lib/VTK_IO/src/: Makefile  Makefile.am  PGFem3D_to_VTK.cc  PGFem3D_to_VTK.cxx
src/: .Makefile.am.swp  ALM.c  ALM.cc  Arc_length.c  Arc_length.cc  BuildConnectivity.c  CH_layer_driver.c  CH_layer_driver.cc  GRedist_node.c  GRedist_node.cc  Hu_Washizu_element.c  Hu_Washizu_element.cc  LINE.c  LINE.cc  MINI_3f_element.c  MINI_3f_element.cc  MINI_element.c  MINI_element.cc  Makefile  Makefile.am  Makefile.am.old  Makefile.bak  Makefile.objects  Newton_Raphson.c  Newton_Raphson.cc  PGFEM_HYPRE_preconditioners.c  PGFEM_HYPRE_preconditioners.cc  PGFEM_io.cc  PGFEM_mpi.c  PGFEM_mpi.cc  PGFEM_par_matvec.c  PGFEM_par_matvec.cc  PGFem3D_data_structure.c  PGFem3D_data_structure.cc  PGFem3D_options.c  PGFem3D_options.cc  PLC.cc  PLoc_Sparse.c  PLoc_Sparse.cc  Printing.cc  (+227 more)
src/communication/: Boot.cc  Communication.cc  ISIR_SparseComm.cc  ISIR_SparseComm.hpp  Makefile.am  MultiscaleComm.cc  MultiscaleCommInfo.cc  MultiscaleCommunication.cc  MultiscaleServerContext.cc  Network.cc  PWC_SparseComm.cc  PWC_SparseComm.hpp
src/communication/mpi/: MPINetwork.cc  MPINetwork.hpp
src/communication/photon/: PhotonNetwork.cc  PhotonNetwork.hpp
src/concept/load_balancer/: Makefile  lb_transfer.c  lb_transfer.h  load.c  load.h  load_balancer.c  load_balancer.h  load_balancer_utils.c  load_balancer_utils.h  load_list.c  load_list.h  main.c  partition.c  partition.h  stats.c  stats.h
src/multiscale/: Makefile.am  MultiscaleCommon.cc  MultiscaleSolution.cc  PGFEM_par_matvec.cc  compute_ms_cohe_job.cc  macro_micro_functions.cc  macro_micro_main.cc  ms_cohe_job_info.cc  ms_cohe_job_info.lo  ms_cohe_job_list.cc  ms_job_intercomm.cc  ms_job_intercomm.lo  pgf_fe2_compute_max_n_jobs.cc  pgf_fe2_job.cc  pgf_fe2_macro_client.cc  pgf_fe2_micro_server.cc  pgf_fe2_rebalancer.cc  pgf_fe2_restart.cc  pgf_fe2_server_rebalance.cc
src/solvers/: Makefile.am  Solver.cc  SparseSystem.cc
src/solvers/hypre/: AMG.cc  BCGStab.cc  Boomer.cc  Euclid.cc  Flex.cc  GMRes.cc  Hybrid.cc  Hypre.cc  Hypre.hpp  Jacobi.cc  Makefile.am  ParaSails.cc  Pilut.cc  Preconditioner.cc  Preconditioners.hpp  ScaleDiag.cc  Solver.cc  Solvers.hpp  boomerAMGInterface.cc  boomerAMGInterface.hpp
src/solvers/trilinos/: Makefile.am  Trilinos.cc  Trilinos.hpp
src/solvers/trilinos/samplexml/: belos.xml  gauss-seidel.xml  ilut.xml  ilutAS.xml  muelu.xml  riluk.xml  rilukAS.xml
tests/box/shear/: Makefile.am
tests/box_shear/: Makefile.am  run.sh.in
tests/box_tension_disp/: Makefile.am  run.sh.in
tests/box_tension_pressure/: Makefile.am
tests/cohesive/: Makefile.am  common.sh.in
tests/cohesive/TwoBlocks_16CPU/: TwoBlocks_10.in.co  TwoBlocks_11.in  TwoBlocks_4.in  TwoBlocks_8.in  TwoBlocks_9.in.co  TwoBlocks_comm_hints_1.in  TwoBlocks_comm_hints_10.in  TwoBlocks_comm_hints_14.in  TwoBlocks_comm_hints_2.in  TwoBlocks_comm_hints_9.in
tests/cohesive/TwoBlocks_16CPU/BC/: Mechanical_0.bc  Mechanical_5.bc
tests/cohesive/TwoBlocks_16CPU/reference_output/: out_macro.out.2
tests/cohesive/TwoBlocks_1CPU/: TwoBlocks_0.in.co
tests/cohesive/TwoBlocks_4CPU/: TwoBlocks_1.in  TwoBlocks_1.in.co  TwoBlocks_2.in
tests/cohesive/TwoBlocks_8CPU/: TwoBlocks_5.in  TwoBlocks_6.in  TwoBlocks_7.in.co  TwoBlocks_comm_hints_1.in  TwoBlocks_comm_hints_4.in
tests/constitutive_model/: CH_layer_driver.cc  Makefile.am  cm_iso_viscous_damage_driver.cc  cm_j2_plasticity_driver.cc  comm_hints_driver.cc  plasticity_model_BPA_driver.cc  unit_test_43_driver.cc
tests/crystal_plasticity/: 8.cpu.cp.sh.in  Makefile.am  common.sh.in
tests/crystal_plasticity/box_8CPU_compression/: box_0.in  box_3.in  box_5.in
utils/: Makefile.am  gen_co_from_NP2NP.cc  gen_restart_from_NP2NP.cc  local2global_id_mapping.h
utils/test/: Mechanical_bc.json  Mechanical_initial.json  Mechanical_load.json  README  gen.PGFem3D.options.sh  map.info.12to4  map.info.4to12  material_mat.json  multiphysics.json  numerical_param.json  run.tests.sh  test.out  test.t3d  timesteps.json
utils/test/map.12/: test_0.map  test_1.map  test_10.map  test_11.map  test_2.map  test_3.map  test_4.map  test_5.map  test_6.map  test_7.map  test_8.map  test_9.map
utils/test/map.4/: test_0.map  test_1.map  test_2.map  test_3.map
utils/test/test_12CPU/: test_0.in  test_1.in  test_10.in  test_11.in  test_2.in  test_3.in  test_4.in  test_5.in  test_6.in  test_7.in  test_8.in  test_9.in  test_comm_hints_0.in  test_comm_hints_1.in  test_comm_hints_10.in  test_comm_hints_11.in  test_comm_hints_2.in  test_comm_hints_3.in  test_comm_hints_4.in  test_comm_hints_5.in  test_comm_hints_6.in  test_comm_hints_7.in  test_comm_hints_8.in  test_comm_hints_9.in
utils/test/test_4CPU/: model_params.in  multiphysics.in  test_0.in  test_0.in.st  test_1.in  test_2.in  test_3.in  test_comm_hints_3.in
verification_MMS/: L2norm.h  MMS.cc  MMS.h  MMS.xx  MMS_HE.cc  Makefile  Makefile.am  README  verification_tf_MMS.c  verification_tf_MMS.cc
verification_MMS/MMS_obj/: MMS_obj_intel
verification_tests/src/: Makefile  Makefile.am  UQ_study.c  UQ_study.cc  crystal_plasticity.c  crystal_plasticity.cc  crystal_plasticity_verification_test.c  crystal_plasticity_verification_test.cc  post_processing.c  shear.c  shear.cc  tension_disp.c  tension_disp.cc  tension_pressure.c  tension_pressure.cc
(+1221 files in other folders)
